# vk-tests

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
shaders/: colored_triangle.frag  tri_mesh.frag  tri_mesh.vert
src/: CMakeLists.txt  logging.hpp  main.cpp  vk_engine.cpp  vk_engine.hpp  vk_initializers.cpp  vk_initializers.hpp  vk_mesh.cpp  vk_mesh.hpp  vk_types.hpp  vma_impl.cpp
